--- a/edad.html
+++ b/edad.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Edad del usuario</title>
+    <title>Edad de persona</title>
     <script src="edad.js"></script>
 </head>
 
